Fix alignment issue by tossing more random CSS

--- a/site/styles.css
+++ b/site/styles.css
@@ -912,10 +912,6 @@ body::before {
   padding-right: 0 !important;
 }
 
-.footer-section ul li {
-  margin-bottom: 0.08em;
-}
-
 .footer-link, .footer-section a {
   color: #fff;
   text-decoration: none;
@@ -1093,18 +1089,15 @@ body::before {
   .footer-company-info {
     font-size: 1em;
     font-weight: normal;
-    line-height: 1.1;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-left: 0.25em;
-    gap: 0.2em;
   }
   
   .footer-company-info > * {
     margin: 0 !important;
     padding: 0 !important;
-    line-height: 1.2;
     font-size: inherit;
     white-space: normal;
   }
